0.11
  - "use lib" in test script is moved to top of script
    to load all module from the library path
  - added "--lwp" option to test script
    to use LWP::UserAgent as HTTP client.
0.10
  - Display error messege when HTTP request to metaCPAN fail.
0.09
  - removed "comment" attribute, and added "before" attribute
  - added "output" option to "test_script" method
0.08
  - removed "list_fail" command, and added "list --fail" option
  - fixed bug that "distnames" is ignored in test script
  - added "privates" attribute to use private repositories
0.07
  - lib attribute can be set as string
  - added distnames attribute to resolve distribution name
    when module name is not same as distribution name.
0.06
  - require Perl 5.008007
  - added comment attribute
  - fixed bug that test number is printed when command is specified
0.05
  - reduced Object::Simple dependency
  - reduced HTTP::Tiny dependency
  - reduced JSON dependency
0.04
  - added "lib" attribute
  - added test count to test script
0.03
  - renamed "exclude" attribute to "ignore"
  - renamed "exclude_default" attribute to "default_ignore"
  - removed "show_lack_module_url" attribute.
  - "list" command renamed to "list_need"
  - added "list_all" command
0.02
  - second release
0.01
  - first release
  