@@ -7,7 +7,7 @@ use FindBin;
 {
   my $tm = Test::ModuleVersion->new;
   $tm->detect;
-  $tm->ignore([qw/Object::Simple TimeDate Mail/]);
+  $tm->ignore([qw/Object::Simple TimeDate Mail LWP/]);
   my $file = "$FindBin::Bin/output/module_auto.t.output";
   open my $fh, '>', $file
     or die qr/Can't open file "$file": $!/;
